public/styles.css
html {
  background-color: #E8EBF3;
  height: 100%;
  position: relative;
  overflow-x: hidden;
  touch-action: none;
}
body{
  position: relative;
  overflow-x: hidden;
  height: 99%;
  margin: 0.5vw;
  justify-items: center;
}

h1 {
  
font-family: "Hoefler Text", "Baskerville Old Face", Garamond, "Times New Roman", serif;
font-size: 68px;
letter-spacing: 4px;
word-spacing: 0.2px;
color: #2C2C2C;
font-weight: 700;
text-decoration: none;
font-style: normal;
font-variant: normal;
text-transform: uppercase;
text-align: center;
margin-bottom: 10vh;
margin-top: 20vh;
}

a {
  text-decoration: none;
}
a:link {
  color: #3E86DD;
}

a:active { 
  color: whitesmoke; 
}

a:visited {
  color: rgb(144, 105, 207);
}



.auth-window {
  z-index: 2;
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100vw;
  /*border-radius: 10px;*/
  backdrop-filter: blur(30px);
  -webkit-backdrop-filter: blur(30px);

}

.auth-window > .close-window {
  position: fixed;
  z-index: 3;
  top: 0;
  left: 0;
  height: 100%;
  width: 100vw;
  opacity: 0%;
}

.auth-window > .inputForm {
  z-index: 4;
  position: absolute;
  z-index: 3;
  top: 50vh;
  left: 2vw;
}

.bottom-text {
  margin-top: 5vh;
  position: relative;
  font-family: "Hoefler Text", "Baskerville Old Face", Garamond, "Times New Roman", serif;
  font-size: 28px;
  color: #2C2C2C;
  font-weight: 700;
  text-decoration: none;
  font-style: normal;
  font-variant: normal;
  text-transform: uppercase;
  text-align: center;
  padding-bottom: 100px;
}

.button {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  border: none;
  color: white;
  padding: 8px 16px;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  border-radius: 2px;
  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.google-auth {
  z-index: 5;
  display: block;
  position: absolute;
  min-width: 382px;
  min-height: 92px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /*border: 2px solid #AD235E;*/
  border: none;
  background-size: contain;
  background:url(./btn_google_signin_light_normal_web@2x.png) no-repeat top center;
}

.collapsed{
  height: 1px;
  overflow: hidden;
}

.delete-btn {
  font-size: x-large;
  z-index: 4;
  font-family: Frutiger,
  "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
  border-radius: 12px;
  padding: 1px 28px;
  background-color: white;
  letter-spacing: 5px;
  text-transform: capitalize;
  color: #f59c6b;
}



.delete-container-x {
  z-index: 4;
  justify-content: space-between;
  display: flex;
  flex-direction: row;
  /* width: -webkit-fill-available; */
  margin-bottom: 1%;
}

.delete-container-y {
  border: 3px solid #F1F4F6;
  border-radius: 12px;
  padding: 5px 30px;
  color: rgb(160, 160, 160);
  position: absolute;
  bottom: 3%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 4;
  justify-content: space-evenly;
  display: flex;
  flex-direction: column;
  background-color: #fdfcfd;
  border-radius: 12px;
  transition: 0.2s;
}

.delete-container-y-expanded {
  height: 84%;
  width: 90%;
}

.delete-btn-yes {
  background-color: #ff3a3a;
  width: 40%;
  text-align: center;
  /* border: 3px solid #F1F4F6; */
  border-radius: 12px;
  color: rgb(255 255 255);
  font-size: x-large;
  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 10px 0px;
}



.delete-btn-no {
  width: 40%;
  text-align: center;
  /* border: 3px solid #F1F4F6; */
  background-color: #3e85dd;
  border-radius: 12px;
  color: white;
  font-size: x-large;
  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 10px 0px;
}



.delete-messege {
  color: rgb(160, 160, 160);
  font-size: 50px;
  text-align: center;
  /*margin-bottom: 1%;*/
  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
  overflow: hidden;
  white-space: nowrap;
}

.login-btn {
  background-color: rgba(255, 94, 0, 0.7);
  text-transform: capitalize;
  position: relative;
  border-radius: 20px;
  display: inline-block;
  cursor: pointer;
  color: #ffffff;
  /* padding: 3px 13px; */
  text-shadow: 0px 1px 0px #263666;
  font-size: 45px;
  letter-spacing: 0.1vw;
  text-transform: capitalize;
  min-width: 80%;
  min-height: 13%;
  display: flex;
  margin: auto;
  align-items: center;
  justify-content: center;
  margin-bottom: 4%;
}



.logout-btn {
  background-color: #e8ebf3;
  color: #ff5e00b3;
  font-size: x-large;
  border-radius: 12px;
  padding: 4px 16px;
  opacity: 60%;
  padding: 0px;
  text-align: justify;
}


.user-wikis-btn {
  background-color: transparent;
  position: absolute;
  right: 2vw;
  top: 12vh;
  color: rgb(160, 160, 160);
  font-size: x-large;
}


.oldstart-btn {
  position: absolute;
  left: 50vw;
  top: 60vh;
  width: 80vw;
  transform: translate(-50%, -50%);
  background-color: #324182;
  color: white;
  font-size: 8vw;
  letter-spacing: 1vw;
  margin: auto;
  border-radius: 9px;
}


.start-btn {
  position: relative;
  background-color: #4678ff;
  border-radius: 20px;
  display: inline-block;
  cursor: pointer;
  color: #ffffff;
  /* padding: 3px 13px; */
  /* text-shadow: 0px 1px 0px #263666; */
  font-size: 90px;
  letter-spacing: 0.1vw;
  text-transform: capitalize;
  min-width: 80%;
  min-height: 13%;
  margin: auto;
  display: flex;
  justify-content: center;
  margin-bottom: 4%;
  align-items: center;
}


.tab-btn {
  background-color: #ff5e00b3;
  color: white;
  font-size: 42px;
  box-shadow: 0 -4px 6px -3px #80808059;
  min-width: 49.4%;
  transition: 300ms;
  /* border: 3px solid #ff5e0057; */
  border-radius: 6px;
}


.tab-active {
  /* min-width: 51.6%; */
  transform: translate(0%, -6%);
  opacity: 80%;
}

.tab-btn-container {
  position: relative;
  width: 80%;
  justify-content: space-between;
  display: flex;
  height: 8%;
  transition: 0.5s;
  margin: auto;
  margin-bottom: 3%;
}

.tab-btn-container-hidden {
  transform: translate(0%, 160%);
}

.compass {
    position: relative;
    width: 18vh;
    height: 18vh;
    margin-right: 6vw;
    /* margin-top: 5%; */
    /* margin-bottom: 5%; */
    /* box-shadow: inset 0 0 10px; */
    /* background-color: #E8EBF3; */
  }

.compass > .distance {
  position: absolute;
  z-index: 1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  /*height: 10px;*/
  line-height: 80%; 
  vertical-align: middle;
  text-align: center;
  font-family: "Hoefler Text", "Baskerville Old Face", Garamond, "Times New Roman", serif; 
  font-size: xx-large; 
  font-style: normal; 
  font-variant: normal; 
  font-weight: 1000; 
}

.compass > .arrow {
  position: absolute;
  width: 0;
  height: 0;
  top: -1vh;
  left: 50%;
  transform: translateX(-50%);
  /* border-style: solid; */
  border-width: 2vh 1.5vh 0 1.5vh;
  border-color: #324182 transparent transparent transparent;
  z-index: 1;
}

.compass > .compass-circle,
.compass > .my-point {
  position: absolute;
  width: 92%;
  height: 92%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition: transform 0.0s ease-out;
  background: url(mincompass.png) center
    no-repeat;
  background-size: contain;
}

.compass > .my-point {
  opacity: 0;
  width: 20%;
  height: 20%;
  background: rgb(8, 223, 69);
  border-radius: 50%;
  transition: opacity 0.5s ease-out;
}

.curr-user-sign {
  color: rgb(160, 160, 160);
  font-size: xx-large;
  border: none;
  background: none;
  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.save-btn {
  position: absolute;
  bottom: 8%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 4;
  color: white;
  font-size: xx-large;
  border-radius: 12px;
  padding: 1px 80px;
  background-color: #f59c6b;
  letter-spacing: 5px;
  text-transform: capitalize;
}

.user-menu {
  position: absolute;
  top: 4%;
  left: 3%;
  display: flex;
  flex-direction: column;
}

.wikicard {
  position: relative;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1.7vh;
  border-radius: 16px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: #FDFCFD;
  font-family: "Hoefler Text", "Baskerville Old Face", Garamond, "Times New Roman", serif;
  /* font-size: 40px; */
  /* font-style: normal; */
  /* font-variant: normal; */
  /* font-weight: 900; */
  transition: 0.2s;
  z-index: 1;
  /* padding-bottom: 2vh; */
}

.card-list-container {
  position: relative;
  left: 0;
  transition: 1s;
  width: 201vw;
  /*background-color: red;*/
  display: flex;
  justify-content: space-between;
}

.card-list {
  position: relative;
  left: 0;
  transition: 1s;
  width: 97.5vw;
}

.card-list-left {
  left: -50%;
}


.cardText {
  /* border: 3px solid #F1F4F6; */
  /* border-radius: 12px; */
  text-align: left;
  /* margin-right: 5vw; */
  margin-left: 5vw;
  margin-top: 2vh;
  margin-bottom: 2vh;
  padding: 2vw;
  width: 55vw;
  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 45px;
  font-style: normal;
  font-variant: normal;
  font-weight: 600;
}

.my-spots-btn {
  background-color: transparent;
  position: absolute;
  min-width: 8vw;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 0;
  top: 38vh;
  color: rgb(160, 160, 160);
  font-size: x-large;
}


.shift-left {
  left: -103.5vw;
}

